--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <header class="header">
-    <img src="./img/marca.svg" alt="bg-left-bottom" width="104" height="38" />
+    <img src="./img/marca-Gustavo.svg" alt="bg-left-bottom" width="104" height="38" />
     <nav>
       <ul class="header-menu">
         <li><a href="#experiencia">Experiência</a></li>
@@ -23,7 +23,7 @@
   </header>
 
   <main class="container introducao">
-    <img src="./img/perfil.jpg" alt="Lobo Cinza" width="360" height="520" />
+    <img src="./img/Gustavo-imagem.jpg" alt="Gustavo" width="360" height="520" />
     <div>
       <h1>Desenvolvedor<br />Front End &<br />UI Designer</h1>
       <p>Localizado em Goiânia</p>
